# SIMD_AVX

./: CMakeLists.txt  com_hikvision_algorithm_JNIComparator.c  com_hikvision_algorithm_JNIComparator.h  gpu_dot.c  int_dot.c  jni_StaticInit.c  jni_Test.c  jni_Test.h  jni_test_ArrayCopyTest.c  jni_test_ArrayCopyTest.h
include/: com_hikvision_algorithm_JNIComparator.h  inline_avx_sum.h  jni_StaticInit.h  jni_Test.h  jni_test_ArrayCopyTest.h
